# por-demo

./: README.md
client/: .config.example.yml  .env.example  .gitignore  Dockerfile  README.md  config.schema.json  docker-compose.yml  package.json  quickstart.md  tsconfig.json
client/src/: all.ts  binance.ts
program/: Cargo.toml
program/src/: errors.rs  main.rs  structs.rs
zkvm-program/: .gitignore  Cargo.toml  README.md  rustfmt.toml
zkvm-program/src/: errors.rs  main.rs  structs.rs
